Sample app fixes (#1401)
* fix styling issue in basket toolbar input

fix icons in column menus

* fix display of table in dialog

* fix issue when vertical scrollbar is added or removed

* reinstate table zebra stripes, colseparators

* minor style fixes

* fix types in ApplicationSettings

--- a/vuu-ui/packages/vuu-table/src/Table.css
+++ b/vuu-ui/packages/vuu-table/src/Table.css
@@ -27,11 +27,11 @@
 }
 
 .vuuTable-zebra {
-  --row-background-even: var(--table-background);
+  --row-background-even: var(--salt-palette-neutral-secondary-background);
 }
 
 .vuuTable-colLines {
-  --cell-borderColor: var();
+  --cell-borderColor: var(--salt-separable-tertiary-borderColor);
 }
 
 .vuuTable-rowLines {
